# gridappsd-training

./: .gitignore  .readthedocs.yaml  .run.sh.swp  1.0L--Module-1--Linux-Installation.ipynb  1.0W--Module-1--Windows-10-Installation.ipynb  1.1W--Lesson-1.1--Virtual-Machine-Docker-Setup.ipynb  1.3W--Lesson-1.3--Running-GridAPPS-D.ipynb  2.0--Module 2--GridAPPS-D-Overview.ipynb  2.1--Lesson-2.1--Intro-to-GridAPPS-D.ipynb  2.2--Lesson-2.2--GridAPPS-D-Architecture.ipynb  2.3--Lesson-2.3--GridAPPS-D-Python-Library.ipynb  3.1--Lesson-3.1--API-Communication-Channels.ipynb  3.4--Lesson-3.4--Using-the-Configuration-File-API.ipynb  3.7 -- Lesson 3.7 -- Using the Timeseries API.ipynb  LICENSE  README.md  Start-Here.ipynb  install.sh  pyproject.toml  requirements.txt  run.sh
.ipynb_checkpoints/: Start-Here-checkpoint.ipynb
docs/: requirements.txt
docs/source/: conf.py  index.rst
gridappsd-env/: pyvenv.cfg
module-content/: 1.2W--Lesson-1.2--Installing-GridAPPS-D.ipynb  1.4W--Lesson-1.4--Installing-Python-Tutorials.ipynb  2.3--Lesson-2.3--GridAPPS-D-Python-Library.ipynb  2.4--Lesson-2.4--GridAPPS-D-Application-Structure.ipynb  2.5--Lesson-2.5--GridAPPS-D-Service-Structure.ipynb  2.6--Lesson-2.6--Common-Information-Model.ipynb  3.2--Lesson-3.2--API-Message-Structure.ipynb  3.3--Lesson-3.3--Using-the-PowerGrid-Models-API.ipynb  convert_notebooks.sh  import_readmes.sh
module-content/.ipynb_checkpoints/: 2.4--Lesson-2.4--GridAPPS-D-Application-Structure-checkpoint.ipynb  3.3--Lesson-3.3--Using-the-PowerGrid-Models-API-checkpoint.ipynb
module-content/api_usage/: Run123NodeDemo.py  (+17 more)
(+274 files in other folders)
